--- a/ios/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantVC.xib
+++ b/ios/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantVC.xib
@@ -10,13 +10,19 @@
                 <outlet property="_cuisineImage" destination="cP9-yN-L0A" id="S7a-lq-FCh"/>
                 <outlet property="_cuisineView" destination="zRj-C3-NGn" id="3Dp-wI-DDu"/>
                 <outlet property="_elementView" destination="Eyp-1G-Zy4" id="feb-VF-6LX"/>
+                <outlet property="_scrollPriceView" destination="iEx-Vk-nNg" id="QT6-hQ-TX6"/>
                 <outlet property="_tableViewCuisine" destination="Ukw-uh-SfO" id="eG1-zQ-YSL"/>
                 <outlet property="_tableViewPrice" destination="UHe-cG-mTS" id="w1O-1p-aRV"/>
                 <outlet property="_textFieldSearch" destination="ilr-Kz-Scu" id="MhX-Gh-zih"/>
+                <outlet property="ambienceImage" destination="s7a-SP-VKj" id="eBM-y0-mSi"/>
                 <outlet property="btFavs" destination="49" id="86"/>
+                <outlet property="cuisineDataImage" destination="TTy-zX-BKM" id="5v6-5M-jSw"/>
                 <outlet property="lbFaved" destination="win-4M-MXg" id="6Xq-6b-wnN"/>
                 <outlet property="lbSaved" destination="K6Z-D4-Kvc" id="5R9-A9-t5f"/>
                 <outlet property="lbTypingRestaurant" destination="39" id="42"/>
+                <outlet property="neighberhoodImage" destination="Yj0-Iq-cP5" id="zpr-4P-c1Z"/>
+                <outlet property="priceImage" destination="Z1m-4q-F3O" id="7dJ-oN-bB5"/>
+                <outlet property="rateImage" destination="UoZ-Af-Xmr" id="ly5-pU-bFn"/>
                 <outlet property="scrollViewMain" destination="79" id="80"/>
                 <outlet property="tbvFilter" destination="22" id="25"/>
                 <outlet property="tbvResult" destination="15" id="21"/>
@@ -27,6 +33,7 @@
                 <outlet property="viewFilterExtends" destination="45" id="82"/>
                 <outlet property="viewFilterSmall" destination="43" id="83"/>
                 <outlet property="viewMain" destination="5" id="112"/>
+                <outlet property="whoareyouImage" destination="BZr-pY-YlL" id="2Ty-zS-Oyf"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -124,7 +131,7 @@
                                     <rect key="frame" x="0.0" y="50" width="320" height="44"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="BE2B5276-6FCA-4519-B7CA-7DEFEBFB4571" id="40">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="C575BA49-B024-40B9-95DA-6A79D1891B99" id="40">
                                             <rect key="frame" x="10" y="0.0" width="300" height="44"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
@@ -326,6 +333,10 @@
                                                 <action selector="cuisinePress:" destination="-1" eventType="touchUpInside" id="gis-Wy-XBZ"/>
                                             </connections>
                                         </button>
+                                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tick mark icon.png" id="TTy-zX-BKM">
+                                            <rect key="frame" x="25" y="103" width="30" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show chains" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Hxk-sT-JSl">
                                             <rect key="frame" x="190" y="312" width="76" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -359,6 +370,26 @@
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                         </button>
+                                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tick mark icon.png" id="BZr-pY-YlL">
+                                            <rect key="frame" x="168" y="171" width="30" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tick mark icon.png" id="s7a-SP-VKj">
+                                            <rect key="frame" x="168" y="103" width="30" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tick mark icon.png" id="Z1m-4q-F3O">
+                                            <rect key="frame" x="168" y="236" width="30" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tick mark icon.png" id="UoZ-Af-Xmr">
+                                            <rect key="frame" x="25" y="236" width="30" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tick mark icon.png" id="Yj0-Iq-cP5">
+                                            <rect key="frame" x="25" y="171" width="30" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
@@ -444,6 +475,9 @@
                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="-1" id="4e9-eP-Vgg"/>
+                                    </connections>
                                 </textField>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Ukw-uh-SfO">
                                     <rect key="frame" x="20" y="83" width="280" height="382"/>
@@ -451,6 +485,10 @@
                                     <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <color key="separatorColor" white="1" alpha="0.52000000000000002" colorSpace="calibratedWhite"/>
                                     <color key="sectionIndexTrackingBackgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <connections>
+                                        <outlet property="dataSource" destination="-1" id="Y8t-p3-a05"/>
+                                        <outlet property="delegate" destination="-1" id="e6l-Bb-qpa"/>
+                                    </connections>
                                 </tableView>
                             </subviews>
                         </scrollView>
@@ -506,6 +544,10 @@
                             <rect key="frame" x="15" y="50" width="290" height="430"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <outlet property="dataSource" destination="-1" id="8pd-TW-EkA"/>
+                                <outlet property="delegate" destination="-1" id="xAg-Gs-oIm"/>
+                            </connections>
                         </tableView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="yaB-7J-gAC">
                             <rect key="frame" x="255" y="12" width="50" height="30"/>
@@ -529,7 +571,7 @@
         </view>
     </objects>
     <resources>
-        <image name="BE2B5276-6FCA-4519-B7CA-7DEFEBFB4571" width="300" height="44">
+        <image name="C575BA49-B024-40B9-95DA-6A79D1891B99" width="300" height="44">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISksLzU4VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
@@ -1479,6 +1521,7 @@ ADIANwBFAEsAVABbAGgAbwB3AHkAfgCAAIIAhwCSAJQAlgCYAJ0AoACiAKQApgCoAK0AxADGAMjcGtwf
 AAACAQAAAAAAAAA/AAAAAAAAAAAAAAAAAADc+g
 </mutableData>
         </image>
+        <image name="Tick mark icon.png" width="30" height="30"/>
         <image name="bg100.png" width="300" height="100"/>
         <image name="bg340.png" width="300" height="340"/>
         <image name="box2.png" width="259" height="9"/>
